--- a/orig/README
+++ b/orig/README
@@ -1,1 +1,1 @@
-Any original files (scans and transcriptions) can be placed here.
+Source edition: http://www.fergusjpwalsh.co.uk/wp-content/uploads/2021/06/Corderius-Colloquia-Scholastica-Draft-June-2021.pdf
